--- a/_css/minimal-mistakes.css
+++ b/_css/minimal-mistakes.css
@@ -3479,12 +3479,12 @@ body:hover .visually-hidden button {
 }
 
 .footnote {
-  color: #9ba1a6;
+  color: #98bbd7;
   text-decoration: none;
 }
 
 .footnotes {
-  color: #9ba1a6;
+  color: #98bbd7;
 }
 
 .footnotes ol,
