--- a/_css/minimal-mistakes.css
+++ b/_css/minimal-mistakes.css
@@ -3677,9 +3677,9 @@ a.reversefootnote:hover {
 .page__hero--overlay {
   position: relative;
   margin-bottom: 2em;
-  padding: 5em 0;
+  padding: 25em 0;
   clear: both;
-  background-size: 100%;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
   background-position: center;
   -webkit-animation: intro 0.3s both;
